--- a/data/package.json
+++ b/data/package.json
@@ -1,9 +1,16 @@
 {
   "name": "User-Manager",
   "version": "0.0.1",
+  "date-created": "2022-07-19",
+  "description-fr": "Dump Manager est un outil de gestion des dumps de bases de données. Il permet de gérer les dumps de bases de données et de les restaurer.",
+  "description-en": "Dump Manager is a tool to manage database dumps. It allows you to manage database dumps and restore them.",
   "dependencies": {
     "Python-Utilities": "https://github.com/Redstoneur/Python-Utilities.git"
   },
-  "description": "A simple user-manager for Redstoneur's servers.",
-  "author": "Redstoneur"
+  "author": {
+    "lastName": "Simoes",
+    "firstName": "Alipio",
+    "birthDate": "2022-09-21",
+    "email": "alipio.simoes01@gmail.com"
+  }
 }
